# bazel_snappy

./: .gitignore  BUILD.bazel  README.md  snappy-stubs-public.h
example/: BUILD  example.cc
